Update contact information: phone, email, and address

--- a/index.html
+++ b/index.html
@@ -316,7 +316,7 @@
                         <div class="contact-icon">📍</div>
                         <div>
                             <h4>Location</h4>
-                            <p>United Arab Emirates</p>
+                            <p>Shams Media City, Sharjah, UAE</p>
                         </div>
                     </div>
                     <div class="contact-item">
@@ -330,7 +330,7 @@
                         <div class="contact-icon">📞</div>
                         <div>
                             <h4>Phone</h4>
-                            <p>+971 XX XXX XXXX</p>
+                            <p>+971 50 280 7518</p>
                         </div>
                     </div>
                     <div class="contact-social">
@@ -405,9 +405,9 @@
                 <div class="footer-section">
                     <h4>Contact</h4>
                     <ul>
-                        <li>United Arab Emirates</li>
+                        <li>Shams Media City, Sharjah, UAE</li>
                         <li>info@consultancyoasis.com</li>
-                        <li>+971 XX XXX XXXX</li>
+                        <li>+971 50 280 7518</li>
                     </ul>
                 </div>
             </div>
