--- a/index.html
+++ b/index.html
@@ -40,6 +40,9 @@
 
     <!-- Hero Section -->
     <section id="home" class="hero">
+        <div class="hero-image-wrapper">
+            <img src="https://images.unsplash.com/photo-1632910121591-29e2484c0259?q=80&w=2231&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Team collaboration" class="hero-image">
+        </div>
         <div class="container">
             <div class="hero-content">
                 <h1 class="hero-title">
