--- a/index.html
+++ b/index.html
@@ -40,26 +40,28 @@
 
     <!-- Hero Section -->
     <section id="home" class="hero">
-        <div class="hero-image-wrapper">
-            <img src="https://images.unsplash.com/photo-1632910121591-29e2484c0259?q=80&w=2231&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Team collaboration" class="hero-image">
-        </div>
         <div class="container">
-            <div class="hero-content">
-                <h1 class="hero-title">
-                    Get exceptional talent at a business friendly rate
-                </h1>
-                <p class="hero-subtitle">
-                    Work with <strong>better people</strong> that cost your business less. Find your next <strong>best performer</strong> today!
-                </p>
-                <div class="hero-cta">
-                    <a href="#contact" class="btn-primary btn-large">
-                        Talk to an expert
-                        <span class="arrow">→</span>
-                    </a>
+            <div class="hero-wrapper">
+                <div class="hero-content">
+                    <h1 class="hero-title">
+                        Get exceptional talent at a business friendly rate
+                    </h1>
+                    <p class="hero-subtitle">
+                        Work with <strong>better people</strong> that cost your business less. Find your next <strong>best performer</strong> today!
+                    </p>
+                    <div class="hero-cta">
+                        <a href="#contact" class="btn-primary btn-large">
+                            Talk to an expert
+                            <span class="arrow">→</span>
+                        </a>
+                    </div>
+                    <div class="hero-badge">
+                        <span class="badge-icon">✓</span>
+                        <span>Risk free start!</span>
+                    </div>
                 </div>
-                <div class="hero-badge">
-                    <span class="badge-icon">✓</span>
-                    <span>Risk free start!</span>
+                <div class="hero-image-container">
+                    <img src="https://images.unsplash.com/photo-1632910121591-29e2484c0259?q=80&w=2231&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Team collaboration" class="hero-image">
                 </div>
             </div>
         </div>
